update shell script